[package]
name = "baidupan-sdk-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "multipart","query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
thiserror = "1.0"
url = "2.5"
md5 = "0.8"

[dev-dependencies]
tokio-test = "0.4"
